# open-archiefbeheer

./: .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.rst  Dockerfile  README.md  README.rst  SECURITY.rst  docker-compose.dev.yml  docker-compose.yml  docker-nginx-default.conf  ruff.toml
backend/: Dockerfile  INSTALL.rst  bootstrap.py  dotenv.dev.example  dotenv.example  package-lock.json  package.json  pyproject.toml  setup.cfg  webpack.config.js
backend/docker-services/: start_services.sh  stop_services.sh
backend/docker-services/keycloak/: docker-compose.yaml
backend/docker-services/keycloak/fixtures/: realm_export.json
backend/docker-services/objecten/: docker-compose.yaml
backend/docker-services/objecten/fixtures/: objecttypen.json
backend/docker-services/objecten/setup_configuration/: data.yaml
backend/docker-services/openklant/: docker-compose.yaml  docker-init-db.sql
backend/docker-services/openklant/setup_configuration/: data.yaml
backend/docker-services/openzaak/: Readme.md  docker-compose.yaml
backend/docker-services/openzaak/clean_db/: clean_db.sql
backend/docker-services/openzaak/docker-init-open-zaak-db/: 0001-docker-init-db.sql
backend/docker-services/setup-configuration/: data.yaml
backend/docs/: Makefile  conf.py  index.rst  testing.rst
backend/docs/coding_style/: backend.rst  frontend.rst
backend/docs/configure/: index.rst  services.rst
backend/docs/deployment/: VHOSTS.rst
backend/docs/developers/: cache.rst  deploying.rst  e2e-tests.rst  gherkin-like-tests.rst  index.rst  logic.rst  release.rst  setup-local-env.rst  translations.rst  vcr-tests.rst
backend/docs/devops/: 2fa.rst  deploying.rst  django-setup-configuration.rst  index.rst  oidc.rst  otel.rst
backend/docs/general/: index.rst
backend/docs/install/: dev.rst  index.rst
backend/docs/manual/: index.rst
backend/requirements/: base.in  base.txt  ci.txt  dev.in  dev.txt  test-tools.in
backend/scripts/: locustfile.py
backend/src/: manage.py
backend/src/openarchiefbeheer/: __init__.py  celery.py  clients.py  conftest.py  middleware.py  setup.py  types.py  urls.py  wsgi.py
(+825 files in other folders)
